Fix text alignment

--- a/pages/css/portfolio.css
+++ b/pages/css/portfolio.css
@@ -13,12 +13,12 @@
     font-family: "Inter", serif;
     letter-spacing: -5px;
     font-size: 30px;
-    text-align: center;  
+    text-align: left;  
 }
 
 .paratex{
     font-family: "Inter", serif;
-    font-size: 30px;
+    font-size: 20px;
     font-weight: bold;
-    text-align: center;
+    text-align: left;
 }
